--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p{
     line-height: 1.4 em;
 }
 
-#blog{
+#content{
     border-top: 1px dotted #ccc;
 }
 
@@ -30,6 +30,10 @@ p{
 
 article{
     border-bottom: 1px solid #000;
+}
+
+img{
+    border: 4px solid rgb(29, 29, 29)
 }
 
 button[data-buttontype="submission"]{
