--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p{
 
 #content{
     border-top: 1px dotted #ccc;
+    min-height: 350px;
 }
 
 .blog-post{
@@ -33,7 +34,7 @@ article{
 }
 
 img{
-    border: 4px solid rgb(29, 29, 29)
+    border: 4px solid #242424
 }
 
 button[data-buttontype="submission"]{
@@ -47,4 +48,37 @@ label[data-needed="true"]{
 
 label{
     border-bottom: 2px dotted rgb(153, 153, 153);
+}
+
+.sticky{
+    background: #fff;
+    padding: 5px;
+    position: sticky;
+    top: 0;
+}
+
+.self-pic{
+    float: right;
+    margin: 20px;
+}
+
+#blogs{
+    display: flex;
+}
+
+.blog-post{
+    background: rgb(207, 207, 207);
+    border: 5px solid #242424;
+    padding: 20px;
+    padding-top: 5px;
+    margin: 20px;
+    margin-top: 5px;
+}
+
+#blogs:nth-of-type(1){
+    flex: 1;
+}
+
+#blogs:nth-of-type(2){
+    flex: 1;
 }
